# gus

./: .gitignore  404.html  MANIFEST.in  Makefile  README-pypi.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
README-pypi/: index.html
inputs/: allometrics.json  trees.csv
notebooks/: Amsterdam.ipynb  Basic Tutorial.ipynb  Basic_Tutorial.ipynb  Cooling.ipynb  Songpa.ipynb  Tutorial.ipynb  data_cleaning_example.ipynb
notebooks/songpa_seoul/: songpa_impacts.csv
notebooks/sugi/: barking.ipynb  heritage_forest.ipynb  parsloes_park.ipynb  sample.html
notebooks/sugi/input/: castle_green_forest.geojson  forest_of_thanks.geojson  thames_view_junior.geojson
notebooks/sugi/output/: Castle Green Forest.csv  Castle_Green_Forest.csv  Forest of Thanks.csv  Forest_of_Thanks.csv  Thames View Junior.csv  Thames_View_Junior.csv
outputs/: trees_yearly.json
pygus/: __init__.py
pygus/gus/: __init__.py  agents.py  allometrics.py  enums.py  models.py  population.py  utilities.py  weather.py
pygus/gus/inputs/: allometrics.json  allometrics_extended.json  amsterdam_all_trees_1000.csv  amsterdam_all_trees_latlng_1000.csv  amsterdam_tree_sample.csv  amsterdam_trees_1000.csv  amsterdam_trees_1000_with_species.csv  scenario.json  site.json  trees.csv
pygus/gus/models/: __init__.py  config.py  miyawaki.py  urban.py
pygus/gus/outputs/: trees_yearly.json
pygus/impacts/: __init__.py  carbon.py  water.py
reference/src/: index.html
reference/src/gus/: index.html
reference/src/gus/agents/: index.html
reference/src/gus/allometrics/: index.html
reference/src/gus/models/: index.html
reference/src/gus/utilities/: index.html
reference/src/gus/weather/: index.html
reference/src/impacts/: index.html
reference/src/impacts/carbon/: index.html
reference/src/impacts/water/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/README-pypi/: index.html
site/reference/src/gus/agents/: index.html
site/reference/src/gus/models/: index.html
site/reference/src/gus/utilities/: index.html
site/reference/src/impacts/carbon/: index.html
site/reference/src/impacts/water/: index.html
site/search/: search_index.json
src/gus/: agents.py  allometrics.py  models.py  utilities.py  weather.py
src/gus/outputs/: trees_yearly.json
src/impacts/: carbon.py  water.py
tests/: general_test.py
