[tool.poetry]
name = "pyGUS"
version = "2.0.1"
description = "Green Urban Scenarios - A digital twin representation, simulation of urban forests and their impact analysis."
authors = ["Bulent Ozel <bulent@lucidminds.ai>"] 
maintainers = [
    "Oguzhan Yayla <oguzhan@lucidminds.ai>", 
    "Marko Petrovic <marko@lucidminds.ai>", 
    "Axel Nilsson <axel@darkmatterlabs.org>"
]
license = "Apache License 2.0"
readme = "README-pypi.md"
repository = "https://github.com/lucidmindsai/gus"
classifiers = [
    "Development Status :: 4 - Beta",
    'Environment :: Console',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'License :: Other/Proprietary License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities'
]
packages = [
    {include = "pygus"},
]


[tool.poetry.dependencies]
python = "^3.8.0"
ipython = "^7.27.0"
mesa = "^0.8.9"
numpy = "^1.21.2"
pandas = "^1.3.3"
pytest = "^7.1.2"
fuzzywuzzy = "^0.18.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
portray = "^1.7.0"
termcolor = "^2.1.1"
utm = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.portray]
modules = ["pygus"]


[tool.portray.mkdocs.theme]
name = "readthedocs"

[[tool.portray.mkdocs.nav]]
Home = "README.md"
