[tool.poetry]
name = "pyGUS"
version = "2.2.2"
description = "Green Unified Scenarios - A digital twin representation, simulation of urban forests and their impact analysis."
authors = ["Bulent Ozel <bulent@lucidminds.ai>"] 
maintainers = [
    "Oguzhan Yayla <oguzhan@lucidminds.ai>", 
    "Marko Petrovic <marko@lucidminds.ai>", 
    "Axel Nilsson <axel@darkmatterlabs.org>"
]
license = "Apache License 2.0"
readme = "README-pypi.md"
repository = "https://github.com/lucidmindsai/gus"
classifiers = [
    "Development Status :: 4 - Beta",
    'Environment :: Console',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'License :: Other/Proprietary License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities'
]
packages = [
    {include = "pygus"},
]


[tool.poetry.dependencies]
python = "^3.10,<3.13"
mesa = "^0.8.9"
pandas = "^1.3.3"
fuzzywuzzy = "^0.18.0"
termcolor = "^2.1.1"
utm = "^0.7.0"
python-levenshtein = "^0.21.1"
shapely = "^2.0.3"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
pytest = "^7.1.2"
ipython = "^7.27.0"
portray = "^1.7.0"
black = {extras = ["jupyter"], version = "^23.7.0"}
folium = "^0.14.0"
basemap = "^1.3.8"
basemap-data-hires = "^1.3.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.portray]
modules = ["pygus"]


[tool.portray.mkdocs.theme]
name = "readthedocs"

[[tool.portray.mkdocs.nav]]
Home = "README.md"
